2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	Simplify the tab line control so as not to consume CPU.
	Thanks to Michael Heerdegen for good suggestions.

	* w3m-ems.el (w3m-tab-line-format, w3m-tab-timer): Abolish.
	(w3m-tab-mouse-track-selected-tab): Run `w3m-tab-line' instead of using
	its cache; remove unused argument `buffers'.
	(w3m-tab-line): Don't use chache and timer.

2013-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Replace `w3m-external-view-current-url', `w3m-external-view-this-url',
	and `w3m-view-url-with-external-browser' with
	`w3m-view-url-with-browse-url' that runs `browse-url'. [emacs-w3m:12190]

	* w3m.el (w3m-menubar, w3m-tab-button-menu-commands, w3m-link-map): Do.
	(w3m-external-view-current-url, w3m-external-view-this-url)
	(w3m-view-url-with-external-browser): Make obsolete.
	(w3m-view-url-with-browse-url): New function.
	(w3m-mode-map): Bind "M" to it.

	* w3m-lnum.el (w3m-lnum-actions-link-alist): Bind "M" to
	w3m-view-url-with-browse-url instead of w3m-external-view.
	(w3m-lnum-mode-map): Use the key bound to w3m-view-url-with-browse-url
	for w3m-lnum-external-view-this-url.
	(w3m-lnum-external-view-this-url): Use w3m-view-url-with-browse-url
	instead of w3m-external-view.

2013-10-16  Michael Heerdegen  <michael_heerdegen@web.de>

	* w3m-ems.el (w3m-tab-line):
	Run w3m-force-window-update unconditionally.  [emacs-w3m:12175]

2013-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-inactive): Add underline property.
	(w3m-form-input-textarea): Don't use it to view read-only textarea.

2013-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make disabled or read-only forms inatcive.

	* w3m-form.el (w3m-form-parse-and-fontify): Make `select', `checkbox',
	`radio', and `file' input forms inactive.
	(w3m-form-input-checkbox, w3m-form-input-radio, w3m-form-input-file)
	(w3m-form-input-select): Don't allow keys if it is inactive.

2013-10-08  Thorsten Jolitz  <tjolitz@gmail.com>
