@@ -1,3 +1,10 @@
+2013-11-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	Make non-link urls unbreakable.  [emacs-w3m:12215]
+
+	* w3m.el (w3m-markup-urls-nobreak): New function.
+	(w3m-rendering-buffer): Use it.
+
 2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	Simplify the tab line control so as not to consume CPU.
